--- a/personal-projects.html
+++ b/personal-projects.html
@@ -7,6 +7,56 @@
 		<script src="https://kit.fontawesome.com/09f8bce437.js" crossorigin="anonymous"></script>
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 		<link rel="stylesheet" href="assets/css/main.css" />
+
+		<style>
+			.item {
+				position: relative;
+				overflow: hidden;
+			}
+			.item img {
+				display: block;
+				width: 100%;
+				height: auto;
+				transition: transform 0.3s;
+			}
+			.item:hover img {
+				transform: scale(1.1);
+			}
+			.item .description {
+				position: absolute;
+				top: 0;
+				left: 0;
+				width: 100%;
+				height: 100%;
+				background-color: rgba(0, 0, 0, 0.8);
+				display: flex;
+				justify-content: center;
+				align-items: center;
+				flex-direction: column;
+				opacity: 0;
+				transition: opacity 0.3s;
+			}
+			.item:hover .description {
+				opacity: 1;
+			}
+			.item .description h3 {
+				color: #fff;
+				margin-bottom: 10px;
+			}
+			.item .description a {
+				display: inline-block;
+				padding: 10px 20px;
+				background-color: #fff;
+				color: #000;
+				text-decoration: none;
+				border-radius: 4px;
+				transition: background-color 0.3s;
+			}
+			.item .description a:hover {
+				background-color: #000;
+				color: #fff;
+			}
+		</style>
 	</head>
 	<body class="is-preload">
 
@@ -91,34 +141,47 @@
               <header>
                 <h2>Projects</h2>
               </header>
-              <div class="row">
+
+							<div class="row">
 								<div class="col-6 col-12-mobile">
-									<article class="item">
-										<a href="project-calradia.html" class="image fit"><img src="images/calradiaRPG/Intro Image.PNG" alt="" /></a>
-										<header>
+									<div class="item">
+										<a href="project-calradia.html" class="image fit">
+											<img src="images/calradiaRPG/Intro Image.PNG" alt="" />
+										</a>
+										<div class="description">
 											<h3>Calradia RPG</h3>
-										</header>
-									</article>
-									<article class="item">
-										<a href="project-danmachi.html" class="image fit"><img src="images/danmachiRPG/d_welcomepage.png" alt="" /></a>
-										<header>
+											<a href="project-calradia.html">Learn More</a>
+										</div>
+									</div>
+									<div class="item">
+										<a href="project-danmachi.html" class="image fit">
+											<img src="images/danmachiRPG/d_welcomepage.png" alt="" />
+										</a>
+										<div class="description">
 											<h3>Danmachi RPG</h3>
-										</header>
-									</article>
+											<a href="project-danmachi.html">Learn More</a>
+										</div>
+									</div>
 								</div>
 								<div class="col-6 col-12-mobile">
-									<article class="item">
-										<a href="project-ocelot.html" class="image fit"><img src="images/ocelot/projectlogo.png" alt="" /></a>
-										<header>
-											<h3>Ocelot</h3>
-										</header>
-									</article>
-									<article class="item">
-										<a href="project-networkvulnerabilities.html" class="image fit"><img src="images/uac.png" alt="" /></a>
-										<header>
-											<h3>Website Vulnerabilities</h3>
-										</header>
-									</article>
+									<div class="item" style="width:96%">
+										<a href="project-ocelot.html" class="image fit">
+											<img src="images/personalprojectlogo.png" alt="" />
+										</a>
+										<div class="description">
+											<h3>Ocelot (Final Year Project)</h3>
+											<a href="project-ocelot.html">Learn More</a>
+										</div>
+									</div>
+									<div class="item">
+										<a href="project-networkvulnerabilities.html" class="image fit">
+											<img src="images/uac.png" alt="" />
+										</a>
+										<div class="description">
+											<h3>Personal Projects</h3>
+											<a href="project-networkvulnerabilities.html">Learn More</a>
+										</div>
+									</div>
 								</div>
 							</div>
             </div>
